Fix horizontal scrolling issue

--- a/index.css
+++ b/index.css
@@ -2,29 +2,27 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|Roboto:300,400');
 
 /* Mobile-first */
-html {
-    height: 100%;
+html, body {
+    height: 80%;
     background-color: black;
-}
-body {
     color: white;
     font-family: Source Sans Pro, monospace;
 }
 
 #mainview {
-    position: relative;
+    /* position: relative; */
     margin-top: 4vh;
     /* margin-left: 20px; */
     /* padding: 0px 0px 30px 0px; */
     z-index: 1;
-    width: 100%;
+    width: 90%;
     text-align: center;
 }
 
 #name {
-    margin: 20px 5% 20px 5%;
+    margin: 20px 5% 20px 6%;
     float: left;
-    width: 100%;
+    width: 90%;
     text-align: left;
     font-size: 3.5rem;
     font-weight: 100;
@@ -38,7 +36,7 @@ body {
 }
 
 #introduction {
-    margin: 20px 5% 20px 5%;
+    margin: 20px 5% 20px 6%;
     float: left;
     text-align: left;
     font-family: 'Roboto', sans-serif;
@@ -50,12 +48,12 @@ body {
 }
 
 .links {
+    margin: 26px 5% 55px 6%;
     float: left;
     text-align: left;
     /* display: inline-block; */
     font-size: 2em;
-    margin: 26px 5% 55px 5%;
-    width: 100%;
+    width: 90%;
 }
 
 .links a {
@@ -70,25 +68,24 @@ body {
 
 /* Desktop */
 /* TODO: Remove duplicates from mobile-first */
-@media only screen and (min-width:600px) {
-    html {
-	width: 100%;
-    }
-
+@media only screen and (min-width:800px) {
     #mainview {
 	position: relative;
 	margin-top: 13vh;
 	margin-left: 20px;
 	padding: 0px 0px 30px 0px;
 	z-index: 1;
-	width: 100%;
 	text-align: center;
     }
 
+    /* Refactor left and right margins into one container */
     #name {
-	margin: 20px 30% 20px 20%;
+	width: 628px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 22%;
+	/* margin: 20px 30% 20px 21%; */
 	float: left;
-	width: 100%;
 	text-align: left;
 	font-size: 3.5rem;
 	font-weight: 100;
@@ -102,7 +99,11 @@ body {
     }
 
     #introduction {
-	margin: 16px 30% 16px 20%;
+	width: 628px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 22%;
+	/* margin: 16px 30% 16px 21%; */
 	float: left;
 	text-align: left;
 	line-height: 35px;
@@ -110,11 +111,14 @@ body {
     }
 
     .links {
+	width: 628px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 22%;
+	/* margin: 26px 30% 55px 21%; */
 	float: left;
 	text-align: left;
 	/* display: inline-block; */
 	font-size: 2em;
-	margin: 26px 30% 55px 20%;
-	width: 100%;
     }
 }
